<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fedo.bouniolsalibi.com.projectcourtcounter.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/Rugby_title"
            android:text="@string/title" />

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Team_title"
                    android:text="@string/team_A" />

                <TextView
                    android:id="@+id/score_team_A"
                    style="@style/Score" />

                <Button
                    android:id="@+id/tryA"
                    style="@style/Point_Buttons"
                    android:layout_marginTop="8dp"
                    android:text="@string/try_button" />

                <Button
                    android:id="@+id/penaltyA"
                    style="@style/Point_Buttons"
                    android:text="@string/penalty_button" />

                <Button
                    android:id="@+id/conversionA"
                    style="@style/Point_Buttons"
                    android:text="@string/conversion_button" />

                <Button
                    android:id="@+id/dropA"
                    style="@style/Point_Buttons"
                    android:text="@string/drop_button" />
            </LinearLayout>

            <View style="@style/Line" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Team_title"
                    android:text="@string/team_B" />

                <TextView
                    android:id="@+id/score_team_B"
                    style="@style/Score" />

                <Button
                    android:id="@+id/tryB"
                    style="@style/Point_Buttons"
                    android:layout_marginTop="8dp"
                    android:text="@string/try_button" />

                <Button
                    android:id="@+id/penaltyB"
                    style="@style/Point_Buttons"
                    android:text="@string/penalty_button" />

                <Button
                    android:id="@+id/conversionB"
                    style="@style/Point_Buttons"
                    android:text="@string/conversion_button" />

                <Button
                    android:id="@+id/dropB"
                    style="@style/Point_Buttons"
                    android:text="@string/drop_button" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            style="@style/Image"
            android:layout_below="@id/main_layout"
            android:src="@drawable/rugby"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                style="@style/Bottom_Buttons"
                android:onClick="result"
                android:text="@string/result" />

            <Button
                style="@style/Bottom_Buttons"
                android:onClick="reset"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

